syntax = "proto3";
package modelgateway;
option go_package = "backend-go-model-gateway/proto;proto";

service ModelGateway {
  rpc GetPlan (PlanRequest) returns (PlanResponse);
  rpc GetRAGContext (RAGContextRequest) returns (RAGContextResponse);
}

// Resource represents a structured, optional multi-modal input to the model.
//
// This is intentionally minimal and "agnostic": planners can attach references
// (URIs/paths) to externally stored data without changing core planning logic.
message Resource {
  string type = 1; // e.g., "image", "audio", "file"
  string uri = 2;  // URI or path to the resource (e.g., S3 URL, local temp path)
}

// ToolService is implemented by the Rust sandbox to execute tools (e.g. web_search)
// over low-latency gRPC.
service ToolService {
  rpc ExecuteTool (ToolRequest) returns (ToolResponse);
}

message PlanRequest {
  string prompt = 1;
  repeated Resource resources = 2; // Optional multi-modal inputs.
}
message PlanResponse { string plan = 1; string model_name = 2; int64 latency_ms = 3; }

message RAGContextRequest {
  string query = 1;
  int32 top_k = 2;
  repeated string knowledge_bases = 3;
}

message RAGMatch {
  string id = 1;
  string text = 2;
  double distance = 3;
  string knowledge_base = 4;
  string source = 5;
}

message RAGContextResponse {
  repeated RAGMatch matches = 1;
}

message ToolRequest {
  string tool_name = 1;
  // JSON string representing the arguments object for the tool.
  string args_json = 2;

  // ---
  // Isolation + resource control contract.
  //
  // These fields are intentionally part of the API *before* we implement a
  // hardened micro-VM runtime (gVisor/Firecracker). The Rust sandbox may ignore
  // them for now, but clients can populate them to future-proof the interface.
  // ---
  string execution_environment = 3; // e.g., "gvisor", "firecracker", "generic-docker"
  int32 cpu_limit_mhz = 4;          // Max CPU resource limit
  int32 memory_limit_mb = 5;        // Max memory allocation
  int32 timeout_seconds = 6;        // Max runtime before termination
}

message ToolResponse {
  string status = 1;
  string stdout = 2;
  string stderr = 3;
}

